issue with scrollbars fixed

--- a/style.css
+++ b/style.css
@@ -46,10 +46,8 @@ body {
 
 #achievements{
 	width: 100%;
-	height: 50pc;
 	background-color: #000;
 	text-align: left;
-	padding: 50px;
 }
 
 #achv{
